@@ -1,5 +1,6 @@
 Version 3.0.6 December 4, 2006
 ==============================
+BUG: Ticket#400 - TJavascriptLogger incompatible with Firefox 2.0 RC1 (Wei)
 BUG: Ticket#442 - TPageService getBasePath in namespace form (Qiang)
 BUG: Ticket#443 - Template comment tag messed up with HTML comment tag (Qiang)
 BUG: Ticket#467 - typo in TUrlMapping.php (Qiang)
@@ -7,10 +8,12 @@ BUG: Ticket#476 - Problem when adding a new text (translate) with MessageSource_
 BUG: TTableCell should render &nbsp; only when Text is not set and there's no child (Qiang)
 BUG: global state was not saved when redirect() is invoked (Qiang)
 BUG: TPager would not display if it was invisible previously (Qiang)
+BUG: Ticket#476 - Problem when adding a new text (translate) with MessageSource_XLIFF (Wei)
 ENH: Ticket#446 - Added TMetaTagCollection.getMetaTagByID method (Qiang)
 ENH: Ticket#451 - Modified TUrlMapping to extend from TUrlManager (Qiang)
 ENH: Ticket#468 - Added support of using all property tags in skins (Qiang)
 ENH: Ticket#471 - Added methods in TAssetManager to expose published path and URL (Qiang)
+ENH: Add ToggleKey for TJavascriptLogger (Wei)
 CHG: Ticket#437 - __autoload is replaced by spl_autoload_register (Qiang)
 CHG: Ticket#454 - Redundant PHP Version Check (Qiang)
 CHG: Ticket#460 - Validators will not perform validation if parents are disabled (Qiang)
